--- a/Romanian/main/Backup.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Backup.apk/res/values-ro/strings.xml
@@ -107,7 +107,7 @@
     <string name="every_day">În fiecare zi</string>
     <string name="exchange_account">Selectaţi contul</string>
     <string name="fail">Eşuat</string>
-    <string name="feature_title_account">Cont</string>
+    <string name="feature_title_account">Cont Mi</string>
     <string name="feature_title_call_log">Istoric apeluri</string>
     <string name="feature_title_mms">MMS</string>
     <string name="file_uploading">Încărcare…</string>
