--- a/Romanian/main/CloudService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudService.apk/res/values-ro/strings.xml
@@ -126,9 +126,10 @@ Dacă veţi schimba cartela SIM, un alt mesaj SMS va fi trimis automat pentru a 
     <string name="license_host_unreachable">Nu se poate conecta la rețea. Pentru a vedea aceste informații acum, mergeţi la %s.</string>
     <string name="loading">Doar o secundă…</string>
     <string name="loading_hint">Încărcare</string>
+    <string name="master_alert_notif_content">"Nu s-a putut efectua sincronizarea"</string>
     <string name="master_alert_notif_dspt_add">%s elemente așteaptã sincronizarea</string>
     <string name="master_alert_notif_dspt_no">Sincronizat</string>
-    <string name="master_alert_notif_title">Ultima sincronizare: cu %s zile în urmă</string>
+    <string name="master_alert_notif_title">Activați sincronizarea cu Mi Cloud</string>
     <string name="micloud_all_sub_1_intl_sms">Un SMS internațional va fi trimis pentru activarea cartelei SIM. Operatorul dumneavoastră vă poate taxa pentru acest SMS.</string>
     <string name="micloud_all_sub_1_sms">Un SMS local va fi trimis pentru activarea cartelei SIM. Operatorul dumneavoastră vă poate taxa pentru acest SMS..</string>
     <string name="micloud_all_sub_1_sms_1_intl_sms">Două SMS-uri(unul local și unul internațional) vor fi trimise pentru activarea cartelei SIM. Operatorul dumneavoastră vă poate taxa pentru aceste SMS-uri.</string>
@@ -175,15 +176,28 @@ Pentru protecția contului, vă recomandăm să opriți sincronizarea pe dispozi
     <string name="micloud_confusion_toast_confirm">Dispozitiv verificat</string>
     <string name="micloud_confusion_toast_deny">Conectați-vă la contul Mi</string>
     <string name="micloud_confusion_yes">Da</string>
+    <string name="micloud_detail_battery_low_message">Acumulatorul este descărcat. Încărcați-l și sincronizați.</string>
+    <string name="micloud_detail_battery_low_title">Acumulatorul este descărcat</string>
+    <string name="micloud_detail_depend_wifi_message">Conectați-vă la Wi-Fi sau verificați setările pentru sincronizare.</string>
+    <string name="micloud_detail_depend_wifi_title">Este necesară conectarea la Wi-Fi</string>
+    <string name="micloud_detail_do_not_sync">"Nu sincroniza"</string>
     <string name="micloud_detail_download_syncing">Se descarcă %s</string>
     <string name="micloud_detail_fail">"Nu se poate sincroniza"</string>
+    <string name="micloud_detail_force_sync">Sincronizați acum</string>
     <string name="micloud_detail_lastest">Sincronizat</string>
     <string name="micloud_detail_lastest_with_off">Sincronizat</string>
+    <string name="micloud_detail_not_sync">%d așteaptă sincronizarea</string>
     <string name="micloud_detail_not_synced">Nesincronizat</string>
+    <string name="micloud_detail_ok">OK</string>
     <string name="micloud_detail_pending">Aşteptare</string>
+    <string name="micloud_detail_preference_sync_items">Elemente</string>
+    <string name="micloud_detail_query_error">"Nu s-au putut obține informații despre progresul sincronizării"</string>
+    <string name="micloud_detail_query_error_detail">"Nu s-a putut obține confirmarea că toate serviciile au fost sincronizate cu succes. Puteți contacta dezvoltatorii prin formularul de feedback."</string>
+    <string name="micloud_detail_query_error_title">"Nu s-au putut obține informații despre starea sincronizării"</string>
+    <string name="micloud_detail_success">Sincronizat</string>
+    <string name="micloud_detail_sync_now">Sincronizați acum</string>
     <string name="micloud_detail_preference_syncing">Sincronizare</string>
     <string name="micloud_detail_preference_wlan">Sincronizare prin Wi-Fi</string>
-    <string name="micloud_detail_success">Sincronizat</string>
     <string name="micloud_detail_syncing">Sincronizare</string>
     <string name="micloud_detail_upload_syncing">Încărcare %s</string>
     <string name="micloud_detail_wlan">%d așteaptă sincronizarea</string>
@@ -224,17 +238,19 @@ Atunci când se atinge limita spaţiului de stocare, datele vechi nu se vor şte
 Pentru a rezolva acest lucru, fie puteți şterge unele fișierele vechi, fie puteți achiziționa spațiu de stocare suplimentar."</string>
     <string name="micloud_full_influence_title">Când Mi Cloud este plin…</string>
     <string name="micloud_main_battery_low">Nivelul acumulatorului este prea scăzut pentru a sincroniza</string>
-    <string name="micloud_main_battery_message">"Conectați încărcătorul pentru a sincroniza
-%d elemente"</string>
+    <string name="micloud_main_battery_message">Conectați încărcătorul pentru a sincroniza</string>
     <string name="micloud_main_clear_now">Curăță</string>
     <string name="micloud_main_data_unsynced">%d aşteaptă sincronizarea</string>
     <string name="micloud_main_detail">Vizualizaţi detaliile</string>
     <string name="micloud_main_last_sync_time">Ultima sincronizare: %s</string>
     <string name="micloud_main_memory_low_message">"Pentru a realiza sincronizarea, ștergeți din datele inutile stocate."</string>
-    <string name="micloud_main_memory_low_title">Spațiu de stocare insuficient</string>
+    <string name="micloud_main_memory_low_title">"Spațiul de stocare internă este insuficient"</string>
     <string name="micloud_main_message_not_synced">%s date nesincronizate</string>
     <string name="micloud_main_network_abnormal">Nu se poate conecta la rețea</string>
     <string name="micloud_main_network_error">Nu se poate conecta la rețea</string>
+    <string name="micloud_main_not_sync">%d elemente așteaptă sincronizarea</string>
+    <string name="micloud_main_query_error_message">"Nu se poate verifica dacă sincronizarea tuturor serviciilor s-a finalizat"</string>
+    <string name="micloud_main_query_error_title">"Nu s-au putut obține informații despre starea sincronizării"</string>
     <string name="micloud_main_set_internet">Reţea</string>
     <string name="micloud_main_space_full">Spațiu de stocare insuficient.</string>
     <string name="micloud_main_space_full_title">Spaţiul de stocare este epuizat</string>
@@ -284,15 +300,23 @@ sincronizarea"</string>
     <string name="micloud_notif_content_depend_wifi">Conectaţi-vă la rețeaua Wi-Fi pentru a sincroniza.</string>
     <string name="micloud_notif_content_master_depend_wifi">Conectați-vă la Wi-Fi mai întâi.</string>
     <string name="micloud_notif_content_memory_low">Nu există spațiu suficient de stocare.</string>
+    <string name="micloud_notif_content_sync_finish">Cont</string>
+    <string name="micloud_notif_content_sync_not_finish">Detalii</string>
     <string name="micloud_notif_content_sync_with_off">Apăsați pentru a vă sincroniza dispozitivul acum.</string>
     <string name="micloud_notif_title_battery_low">"Nu se poate sincroniza cu Mi Cloud"</string>
     <string name="micloud_notif_title_clipboard_push">Conținut copiat în clipboard</string>
     <string name="micloud_notif_title_depend_wifi">%d în așteptarea sincronizării</string>
     <string name="micloud_notif_title_master_depend_wifi">"Nu se poate sincroniza cu Mi Cloud"</string>
     <string name="micloud_notif_title_memory_low">"Nu se poate sincroniza cu Mi Cloud"</string>
+    <string name="micloud_notif_title_sync_finish">Sincronizat</string>
+    <string name="micloud_notif_title_sync_not_finish">"Unele elemente nu au fost sincronizate"</string>
+    <string name="micloud_notif_title_sync_progress">Sincronizare</string>
     <string name="micloud_notif_title_sync_with_off">Sincronizare cu Mi Cloud</string>
     <string name="micloud_other_product_price">Comparaţi prețurile</string>
     <string name="micloud_proceed">Continuaţi</string>
+    <string name="micloud_request_permission_confirm">Am înțeles</string>
+    <string name="micloud_request_permission_content">Mi Cloud necesită acordarea unor permisiuni pentru sincronizarea datelor. Permiteți Mi Cloud să acceseze Calendarul, Contactele, Contul Mi, starea cartelei SIM, istoricul apelurilor și al mesajelor.</string>
+    <string name="micloud_request_permission_title">Mi Cloud necesită acordarea unor permisiuni</string>
     <string name="micloud_sec_dspt">și pentru a partaja lucruri prietenilor.</string>
     <string name="micloud_setting_antispam_summary">Excepții și numere de telefon blocate</string>
     <string name="micloud_setting_browser_summary">Marcaje, istoric şi file</string>
@@ -339,6 +363,7 @@ sincronizarea"</string>
     <string name="micloud_web_discription_01">Conectaţi-vă la i.mi.com</string>
     <string name="micloud_web_discription_02">pentru a stoca și accesa fișierele de oriunde</string>
     <string name="micloud_web_discription_international">Vizitaţi www.mi.com/micloud</string>
+    <string name="micloud_website">Vizualizați elementele în Mi Cloud</string>
     <string name="microsoft_cloud">Servicii Microsoft Cloud</string>
     <string name="microsoft_cloud_eng">One Drive</string>
     <string name="microsoft_cloud_price">Aproximativ 11 euro pe an</string>
@@ -397,9 +422,10 @@ Această caracteristică criptează și trimite ID-ul dispozitivului dvs. pe ser
     <string name="soundrecorder_sync_records">Sincronizare cu Mi Cloud</string>
     <string name="start_micloud">Porniţi</string>
     <string name="storage">Stocare</string>
+    <string name="sub_alert_notif_content">Porniți sincronizarea cu Mi Cloud pentru a putea face o copie de siguranță pentru datele dumneavoastră</string>
     <string name="sub_alert_notif_dspt_add">%s elemente aşteaptă sincronizarea</string>
     <string name="sub_alert_notif_dspt_no">Sincronizat</string>
-    <string name="sub_alert_notif_title">Nu se sincronizează</string>
+    <string name="sub_alert_notif_title">Sincronizați cu Mi Cloud</string>
     <string name="sub_sync_item_sms_summary">Sincronizați mesajele care conțin fotografii, fişierele audio sau alte fişiere multimedia doar atunci când sunteți conectat la o rețea Wi-Fi</string>
     <string name="sub_sync_item_sms_title_wifi_only">Utilizaţi doar Wi-Fi pentru sincronizarea MMS</string>
     <string name="success_upgraded_space">%s adăugat</string>
