--- a/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
@@ -8,6 +8,11 @@
     <string name="Settings_title_network_assistants">Setări utilizare date</string>
     <string name="Settings_title_power_center">Setări acumulator</string>
     <string name="ac_enable_title">Activați blocarea aplicațiilor</string>
+    <string name="ac_enter_applock">Accesați Blocare Aplicații</string>
+    <string name="ac_firstUseApplock_subTitle">Utilizați Blocarea aplicațiilor pentru a vă proteja confidențialitatea</string>
+    <string name="ac_firstUseApplock_title">Solicită o parolă pentru a utiliza aplicațiile selectate</string>
+    <string name="ac_summaryOff">Dacă este dezactivată nu este necesară parola pentru accesarea aplicațiilor</string>
+    <string name="ac_summaryOn">Dacă este activată se va solicita parola de deblocare pentru accesarea aplicațiilor</string>
     <string name="access_control_need_password">"%s adăugată cu succes
 "</string>
     <string name="access_control_need_to_unlock">"Scanați amprenta
@@ -27,6 +32,7 @@ sau introduceţi parola pentru deblocarea aplicațiilor"</string>
     <string name="activity_title_network_speed_detail">Viteză conexiune</string>
     <string name="activity_title_networkassistants">Utilizare date</string>
     <string name="activity_title_notification_bar_manager">Notificări</string>
+    <string name="activity_title_other_permission_manager">Alte permisiuni</string>
     <string name="activity_title_perm_manager">Permisiuni</string>
     <string name="activity_title_permission_manager">Permisiuni</string>
     <string name="activity_title_permissions_manager">Permisiuni</string>
@@ -130,7 +136,6 @@ sau introduceţi parola pentru deblocarea aplicațiilor"</string>
     <string name="btn_text_start_check">Verificare</string>
     <string name="btn_text_stop">Opriţi</string>
     <string name="btn_text_virus_scan">Scanaţi</string>
-    <string name="button_antivirus">OK</string>
     <string name="button_text_accept">Acceptaţi</string>
     <string name="button_text_accept_timer">Acceptaţi (%d)</string>
     <string name="button_text_cancel">Anulaţi</string>
@@ -191,7 +196,7 @@ sau introduceţi parola pentru deblocarea aplicațiilor"</string>
     <string name="data_usage_correction_timeout_body">Atingeți pentru a actualiza manual.</string>
     <string name="data_usage_correction_timeout_title">Timpul pentru sincronizarea utilizării datelor a expirat</string>
     <string name="data_usage_disabled_dialog">Ați atins limita de utilizare a datelor din planul dvs. Dacă depăşiţi această limită, operatorul vă poate percepe taxe suplimentare.</string>
-    <string name="data_usage_disabled_dialog_enable">Activaţi datele</string>
+    <string name="data_usage_disabled_dialog_enable">Activaţi datele mobile</string>
     <string name="data_usage_leisure_warning_body">Atingeți pentru a vizualiza detaliile despre utilizarea datelor.</string>
     <string name="data_usage_leisure_warning_title">Limita utilizării datelor în afara orelor de vârf</string>
     <string name="data_usage_limit_body">Atingeți pentru a activa datele mobile.</string>
@@ -210,17 +215,17 @@ sau introduceţi parola pentru deblocarea aplicațiilor"</string>
     <string name="datausage_purchase_banner_title">%s ofertă de reîncărcare (exclusiv)</string>
     <string name="datausage_purchase_buy">Obţineţi</string>
     <string name="datausage_purchase_confirm_tip">Comanda dvs.:</string>
-    <string name="datausage_purchase_get_captcha">Obţineţi codul de verificare (%d)</string>
+    <string name="datausage_purchase_get_captcha">Obţineţi codul (%d)</string>
     <string name="datausage_purchase_get_captcha_again">Trimiteţi un cod nou</string>
     <string name="datausage_purchase_get_captcha_failed">Nu s-a putut obţine codul de verificare. Verificați conexiunea de date și încercați din nou.</string>
     <string name="datausage_purchase_goto_monthsetting">Editaţi informaţia despre abonament</string>
     <string name="datausage_purchase_none_history">Gol</string>
-    <string name="datausage_purchase_order_failure">Cumpărare eșuată</string>
-    <string name="datausage_purchase_order_failure_cause">Achiziția a eșuat…</string>
+    <string name="datausage_purchase_order_failure">"Cumpărare eșuată"</string>
+    <string name="datausage_purchase_order_failure_cause">"Nu s-a putut finaliza achiziționarea"</string>
     <string name="datausage_purchase_order_history">Istoric</string>
     <string name="datausage_purchase_ordering">Achiziţie…</string>
     <string name="datausage_purchase_pay_captcha_hint">Introduceți codul pe care îl primiți aici</string>
-    <string name="datausage_purchase_pay_captcha_tips">După ce veți primi codul de verificare, introduceţi-l în caseta de mai sus și apăsați Procuraţi pentru a finaliza achiziția. Rețineți: codul este valabil doar 10 minute!</string>
+    <string name="datausage_purchase_pay_captcha_tips">După ce veți primi codul de verificare, introduceţi-l în caseta de mai sus și apăsați \"Procuraţi\" pentru a finaliza achiziția. Rețineți: codul este valabil doar 10 minute!</string>
     <string name="datausage_purchase_pay_confirm">Obţineţi</string>
     <string name="datausage_purchase_pay_hint">Pentru a anula, apelaţi %s</string>
     <string name="datausage_purchase_pkglist_networkerror">Imposibil de conectat la reţea. Verificați conexiunea de date și încercați din nou.</string>
@@ -338,7 +343,6 @@ sau introduceţi parola pentru deblocarea aplicațiilor"</string>
     <string name="handle_text_cache">Cache</string>
     <string name="handle_text_memory">Memorie</string>
     <string name="handle_text_system">Sistem</string>
-    <string name="header_antivirus">Această caracteristică criptează și încarcă ID-ul dispozitivului dvs. pe serverele Tencent (%s).</string>
     <string name="help_label">Ajutor</string>
     <string name="hints_auto_start_warning_info">Dacă restricţionaţi pornirea automată, unele aplicații și servicii nu vor putea primi notificări.</string>
     <string name="hints_cleanning_text">Curăţare…</string>
@@ -538,13 +542,8 @@ o conexiune de date mobile"</string>
     <string name="mi_service_framework">Mi Service Framework</string>
     <string name="mi_service_traffic_detail">Detalii Framework</string>
     <string name="mian_page_primary_txt">Roaming internaţional</string>
-    <string name="modify_password_info">Model de deblocare</string>
     <string name="modifypassword">Modificați parola</string>
     <string name="monitor_requests_from_pc">Administrați instalarea aplicațiilor prin USB</string>
-    <string name="month_report_activity_label">Raport lunar</string>
-    <string name="month_report_click_reconnect_network">Încercaţi din nou</string>
-    <string name="month_report_disconnect_tip">Nu se poate conecta la reţea</string>
-    <string name="month_report_history_activity_label">Istoric</string>
     <string name="month_report_month_report_switch">Se afişează raportul lunar</string>
     <string name="network_assistant_upgraded_body">Atingeţi pentru a vizualiza detaliile.</string>
     <string name="network_assistant_upgraded_title">Actualizare finalizată</string>
@@ -596,20 +595,11 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="network_speed_for_apps_total">Viteză conexiune</string>
     <string name="networkchanged_exception_summary">Conexiunea la rețea s-a modificat. Testați din nou.</string>
     <string name="networkchanged_exception_title">Conexiune modificată</string>
-    <string name="month_report_network_dialog_description">Permiteţi acestei aplicaţii să se conecteze la internet pentru a obține informaţii despre raport?</string>
-    <string name="month_report_network_dialog_positive">Permiteţi</string>
-    <string name="month_report_network_dialog_title">Nu se pot obține informaţiile despre raport</string>
-    <string name="month_report_result_share">Distribuiţi</string>
-    <string name="month_report_share_img_fail">Nu s-a putut distribui</string>
-    <string name="month_report_share_loading">Doar o secundă…</string>
-    <string name="month_report_warning_dialog_description">Pentru a vizualiza raportul lunar, activați această caracteristică în setările aplicației Securitate.</string>
-    <string name="month_report_warning_dialog_positive">Activaţi</string>
-    <string name="month_report_warning_dialog_title">Raport de securitate lunar</string>
-    <string name="name_antivirus">Vizualizaţi Politica de confidențialitate</string>
     <string name="never">O dată</string>
     <string name="none_mi_service_app_detail">Gol</string>
     <string name="notification_button_text_of_low_memory">Curăţare</string>
     <string name="notification_item">Activați blocarea aplicațiilor</string>
+    <string name="notification_subtitle">Apăsați pentru a activa</string>
     <string name="notification_summary_cmcc_app_check">Atingeți pentru a vizualiza detalii.</string>
     <string name="notification_title_cmcc_app_check">%d zile de la ultima verificare</string>
     <string name="notification_title_firewall_blocked">Blocat</string>
@@ -630,6 +620,7 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="online_songs">Muzică</string>
     <string name="open_now">Permiteți aplicației să utilizeze datele mobile</string>
     <string name="operator_diagnostic">Diagnosticare operator</string>
+    <string name="operator_mi_sim">Mi SIM</string>
     <string name="operator_name_cmcc">China Mobile</string>
     <string name="operator_name_telcom">China Telecom</string>
     <string name="operator_name_unicom">China Unicom</string>
@@ -656,11 +647,7 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="permission_close_permission_control_dialog_title">Dezactivaţi?</string>
     <string name="permission_exception_summary">Unele aplicații nu au permisiunea de a se conecta la internet</string>
     <string name="permission_exception_title">Vizualizaţi permisiunile de reţea</string>
-    <string name="permission_group_title_charges_related">Taxe</string>
-    <string name="permission_group_title_media_related">Multimedia</string>
     <string name="permission_group_title_others">Altele</string>
-    <string name="permission_group_title_privacy_related">Confidenţialitate</string>
-    <string name="permission_group_title_settings_related">Setări</string>
     <string name="permission_permission_control_closed_desc_dialog_msg">Aplicațiile nu vor cere permisiunea înainte de a citi contactele, de a vizualiza istoricul apelurilor, de a modifica setările de sistem sau de a accesa camera foto și alte resurse de pe dispozitiv. Puteți activa această caracteristică în Setări>Permisiuni.</string>
     <string name="permission_permission_control_closed_desc_dialog_title">Gestionare permisiuni</string>
     <string name="permission_send_sms_descx">Aplicaţiile pot trimite mesaje SMS şi MMS</string>
@@ -669,12 +656,8 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="permit_running_network">Date în fundal</string>
     <string name="person_hotpot">Hotspot-uri mobile</string>
     <string name="pkg_traffic">Setaţi limita de utilizare a datelor</string>
-    <string name="pm_auto_start_basic_services_lock">Blocat</string>
-    <string name="pm_auto_start_basic_services_unlock">Deblocat</string>
-    <string name="pm_auto_start_by_basic_services">Servicii de bază</string>
     <string name="pm_auto_start_by_other">Declanșare pornire</string>
     <string name="pm_auto_start_by_other_app">Permite aplicației să fie lansată de către alte aplicații</string>
-    <string name="pm_auto_start_by_other_services">Încercați să opriți aceste servicii</string>
     <string name="pm_auto_start_by_system">Aplicații pornire</string>
     <string name="pm_auto_start_by_system_event">Permite aplicațiilor să pornească automat</string>
     <string name="pm_auto_start_proc_is_running">Rulează</string>
@@ -881,6 +864,7 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="pref_leisure_no_overlay">Activat</string>
     <string name="pref_leisure_not_opened">Dezactivat</string>
     <string name="pref_manual_adjust">Setaţi manual statistica de utilizare a datelor</string>
+    <string name="pref_mi_sim_settings">Setări Mi SIM</string>
     <string name="pref_month_begin_date">Data de resetare a utilizării datelor</string>
     <string name="pref_month_first_day">1</string>
     <string name="pref_more_traffic_settings">Setări adiţionale</string>
@@ -977,7 +961,7 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="roaming_not_start_title">Roaming internațional</string>
     <string name="roaming_start_body">Atingeți pentru a vizualiza excepţiile roaming-ului de date.</string>
     <string name="roaming_start_title">Roaming internațional</string>
-    <string name="root">Acces Root</string>
+    <string name="root">Acces root</string>
     <string name="root_apply_step_1">Acordaţi aplicaţiei %s acces root?</string>
     <string name="root_apply_step_2">Acordarea accesului root poate destabiliza dispozitivul.</string>
     <string name="root_apply_step_3">Datele dvs. sunt mai vulnerabile la atacurile provenite din partea aplicațiilor cu acces root.</string>
@@ -1030,8 +1014,6 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="suffix_virus_count_bottom">total</string>
     <string name="suffix_virus_count_top">riscuri</string>
     <string name="suggest_app_tolock">Sugestii</string>
-    <string name="summary_antivirus">Încărcați și scanați numele și detaliile aplicaţiilor folosind definiții de viruși on-line.</string>
-    <string name="summary_antivirus_oversea">Actualizare automată a definițiilor de viruși</string>
     <string name="summary_app_lock_disable">Blocați aplicațiile pentru a preveni utilizarea lor de către persoane neautorizate</string>
     <string name="summary_cleaner_cloudscan">Încărcați și comparați numele de dosare cu definițiile on-line</string>
     <string name="summary_cloud_account">Obțineți mai mult de la dispozitivul dvs. Mi</string>
@@ -1154,9 +1136,6 @@ Citiți instrucțiunile care însoțesc router-ul și resetaţi-l la configurare
     <string name="timeshow_s">%d s</string>
     <string name="tips_dialog_title">Nu cunoaşteţi limita</string>
     <string name="tips_message">Pentru a vizualiza detalii ale planului de date, apelaţi %2$s (%1$s).</string>
-    <string name="text_antivirus">Se încarcă numele aplicaţiilor şi detaliile</string>
-    <string name="text_antivirus_oversea">Actualizare definiții de viruși</string>
-    <string name="title_antivirus">Politica de confidențialitate Tencent</string>
     <string name="title_app_lock_disable">Blocați aplicații</string>
     <string name="title_app_update">Actualizări disponibile</string>
     <string name="title_cleaner_cloudscan">Se încarcă numele dosarului</string>
@@ -1353,6 +1332,7 @@ Datele rămase includ datele reportate din luna anterioară."</string>
     <string name="usbsharenet_exception_title">Testare internet partajat prin USB</string>
     <string name="usbsharenet_pc_exception_summary">Nu se poate conecta la internet utilizând conexiunea USB partajată. Verificați conexiunea la internet a computerului.</string>
     <string name="virus_list_header_title">%d viruşi detectaţi</string>
+    <string name="warning_open_mi_sim">Activați Mi SIM</string>
     <string name="wifi_exception_summary">Testați rețelele Wi-Fi disponibile</string>
     <string name="wifi_exception_title">Testare reţea Wi-Fi</string>
     <string name="wifi_network_blocked_notification_title">Nicio conexiune la internet</string>
