--- a/Romanian/main/CloudBackup.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudBackup.apk/res/values-ro/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="about_to_recover">Doar o secundă…</string>
+    <string name="account_error">Eroare cont</string>
     <string name="app_name">Copie de rezervă pentru aplicaţii</string>
     <string name="as_new_device">Înlocuiți ecranul principal și setările anterioare</string>
     <string name="as_new_device_summary">Ștergeți copiile de rezervă anterioare din Mi Cloud</string>
@@ -9,8 +10,10 @@
     <string name="backing_up_to_micloud">Creare copie de rezervă…</string>
     <string name="backup_fail">Crearea copiei de rezervă pentru setările ecranului de pornire a eşuat</string>
     <string name="backup_finished_notification_content">S-au salvat aplicațiile de pe ecranul principal, setările sistemului, etc.</string>
+    <string name="backup_now">Faceți o copie de rezervă acum</string>
     <string name="backup_size">Dimensiune: %s</string>
     <string name="backup_success">Crearea copiei de rezervă pentru ecranul de pornire a reuşit</string>
+    <string name="backup_successfully">Copie de rezervă creată cu succes</string>
     <string name="backup_to_cloud">Creaţi o copie de rezervă în Mi Cloud</string>
     <string name="button_cancel">Anulaţi</string>
     <string name="button_delete">Ștergeţi</string>
@@ -54,7 +57,7 @@ Notă: Datele aplicațiilor instalate nu vor fi salvate în Mi Cloud!"</string>
     <string name="cloud_backup_detail_manage_summary">%1$s copii de rezervă, dimensiune: %2$s</string>
     <string name="cloud_backup_detail_state">Copie de rezervă Mi Cloud</string>
     <string name="cloud_backup_detail_state_summary">Aplicații, ecran principal și setările sistemului</string>
-    <string name="cloud_backup_detail_time">; data copiei de rezervă %1$s</string>
+    <string name="cloud_backup_detail_time">; data copiei de rezervă: %1$s</string>
     <string name="cloud_backup_have_data">A fost găsită o copie de rezervă în Mi Cloud</string>
     <string name="cloud_backup_select_recover">Selectați copia de rezervă din Mi Cloud</string>
     <string name="cloud_restore_from_other_device">Opriţi restabilirea din %s şi ștergeţi această copie de rezervă? Această acţiune este ireversibilă!</string>
@@ -96,7 +99,6 @@ Notă: Datele aplicațiilor instalate nu vor fi salvate în Mi Cloud!"</string>
     <string name="recover_from_micloud">Restabilire dintr-o copie de rezervă Mi Cloud</string>
     <string name="recover_home_settings">Restabiliţi setările ecranului de pornire</string>
     <string name="recover_miui_settings">Restabiliţi setările de sistem</string>
-    <string name="recover_settings">Restabiliţi setările pentru ecranul de pornire</string>
     <string name="recover_settings_description">Nu opriţi telefonul!</string>
     <string name="recovering">Restabilire %s</string>
     <string name="remove_task_in_process">Eliminare…</string>
@@ -105,6 +107,7 @@ Notă: Datele aplicațiilor instalate nu vor fi salvate în Mi Cloud!"</string>
     <string name="restore_from_cloud">Restabilire dintr-o copie de rezervă Mi Cloud</string>
     <string name="restore_from_this_device">Restabilire utilizând această copie de rezervă</string>
     <string name="restore_home_screen_apps">Restabilire utilizând copia de rezervă din Mi Cloud</string>
+    <string name="restore_task_unfinished">Se restabilesc aplicațiile. Încercați din nou mai târziu</string>
     <string name="restoreing_file_tile">Se restabilesc %d fișiere</string>
     <string name="retry">Reîncercaţi</string>
     <string name="self_phone">Acest telefon</string>
