--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -22,7 +22,7 @@
     <string name="action_item_share">Distribuiţi</string>
     <string name="action_settings">Setări</string>
     <string name="add_music">Adăugaţi melodii</string>
-    <string name="add_to_last_of_playlist">Adaugă la sfârșitul listei de redare.</string>
+    <string name="add_to_last_of_playlist">Adaugă la sfârșitul listei de redare</string>
     <string name="alaka_required">"Această melodie nu este disponibilă."</string>
     <string name="album_name">Album</string>
     <string name="album_search_title">Album</string>
@@ -95,13 +95,13 @@
     <string name="close_music_time">"Timp rămas: "</string>
     <string name="cloud_enable">Sincronizare muzică cu Mi Cloud</string>
     <string name="cloud_settings">Setări sincronizare</string>
-    <string name="cloud_space_full">Nu mai există spațiu de stocare disponibil</string>
+    <string name="cloud_space_full">Nu mai există spațiu de stocare disponibil în Mi Cloud</string>
     <string name="cloud_space_full_message">Nu mai există spațiu în Mi Cloud pentru a adăuga melodii noi. Pentru a obține spațiu de stocare suplimentar, actualizați contul Mi.</string>
     <string name="confirm_delete_downloads_message">%d descărcări vor fi șterse.</string>
     <string name="confirm_delete_the_download_item_message">Ștergeți aceste descărcări?</string>
     <string name="confirm_download">Descărcare</string>
     <string name="confirm_to_renew">Reînnoire</string>
-    <string name="cp_info_first">Serviciul de streaming este oferit în principal de către Ultimate Inc.</string>
+    <string name="cp_info_first">Serviciul de streaming este oferit de către Ultimate Inc.</string>
     <string name="cp_info_second">service1@ultimobi.com</string>
     <string name="create_playlist">Creaţi o listă de redare</string>
     <string name="create_playlist_failure">Nu s-a putut crea lista de redare</string>
@@ -121,9 +121,10 @@
     <string name="desktop_lyric_button_close">Închideți</string>
     <string name="desktop_lyric_button_lock">Blocați</string>
     <string name="desktop_lyric_color">Culoare</string>
-    <string name="desktop_lyric_dialog_msg">Deschideți-o în Muzica mea-Setări-Setări avansate</string>
+    <string name="desktop_lyric_dialog_msg">Activați sau dezactivați afișarea versurilor în ecranul principal din Muzică &gt; Setări &gt; Setări avansate</string>
     <string name="desktop_lyric_dialog_positive_button">Încercați acum</string>
-    <string name="desktop_lyric_dialog_title">Încercați afișarea versurilor pe ecranul principal</string>
+    <string name="desktop_lyric_dialog_title">Încercați acum</string>
+    <string name="desktop_lyric_lock_toast">Blocat. Puteți debloca Muzica din panoul de notificări.</string>
     <string name="desktop_lyric_setting_summary">Afișează versurile în ecranul principal</string>
     <string name="desktop_lyric_setting_title">Versuri pe ecranul principal</string>
     <string name="desktop_lyric_textsize">Text</string>
@@ -149,7 +150,6 @@
     <string name="dialog_not_show_again">"Nu arăta din nou"</string>
     <string name="dialog_queued_body">Acest fișier este în coada de așteptare pentru descărcarea ulterioară.</string>
     <string name="dialog_title_add_playlist">Adăugaţi o listă de redare</string>
-    <string name="dialog_title_delete_playlist">Ştergeţi lista de redare</string>
     <string name="dialog_title_delete_tracks">Ştergeţi</string>
     <string name="dialog_title_name_playlist">Nume listă de redare</string>
     <string name="dialog_title_not_available">Descărcarea a eșuat</string>
@@ -176,9 +176,6 @@
     <string name="download_auto_after_favorite_title">Descărcare favorite</string>
     <string name="download_auto_cancel">Descărcare favorite dezactivată</string>
     <string name="download_auto_message">Melodiile pe care le-aţi adăugat la favorite vor fi descărcate automat atunci când vă conectaţi la internet prin Wi-Fi. Puteți modifica acest lucru în Setări.</string>
-    <string name="download_auto_quality_alert_sub_title_for_expired">Perioada de încercare sau abonamentul dvs. au expirat. Selectați altă calitate de descărcare.</string>
-    <string name="download_auto_quality_alert_sub_title_for_login">Pentru a activa, conectați-vă la contul dvs. Mi.</string>
-    <string name="download_auto_quality_alert_title">Calitate descărcare muzică</string>
     <string name="download_auto_when_all_network">Utilizaţi rețeaua mobilă și Wi-Fi</string>
     <string name="download_auto_when_free_network">Utilizaţi doar Wi-Fi</string>
     <string name="download_auto_when_free_network_summary">Setări suplimentare pentru melodiile pe care le-aţi adăugat la favorite</string>
@@ -206,7 +203,7 @@
     <string name="download_method">Descărcaţi</string>
     <string name="download_no_application_title">Nu se poate deschide fișierul</string>
     <string name="download_paused">Descărcarea a fost oprită</string>
-    <string name="download_paused_in_power_save_mode">Descărcarea a fost oprită deoarece telefonul a intrat în modul Economisire energie</string>
+    <string name="download_paused_in_power_save_mode">Descărcările curente au fost oprite de către modul Economisire energie</string>
     <string name="download_pending">Se așteaptă descărcarea</string>
     <string name="download_percent">%d%%</string>
     <string name="download_processing">Descărcare…</string>
@@ -224,7 +221,7 @@
     <string name="download_traffic_dialog_buy_package">Achiziționați un plan de date pentru muzică</string>
     <string name="download_traffic_dialog_msg">Utilizarea datelor mobile pentru descărcarea melodiilor poate genera costuri suplimentare</string>
     <string name="download_traffic_dialog_negative_button">Așteptați conectarea la Wi-Fi</string>
-    <string name="download_traffic_dialog_position_button">Descărcați imediat</string>
+    <string name="download_traffic_dialog_position_button">Descărcați totuși</string>
     <string name="download_unknown_title">&lt;Nedenumit&gt;</string>
     <string name="download_wait_connect">Așteaptă conectarea la Wi-Fi</string>
     <string name="download_when_network_connected">Descarcă utilizând datele mobile</string>
@@ -314,7 +311,6 @@
     <string name="group_artist">Trupe</string>
     <string name="handle_later">Nu acum</string>
     <string name="headset_settings">Căști și efecte audio</string>
-    <string name="high_quality">Calitate superioară</string>
     <string name="higher_quality_music">Muzică la calitate superioară</string>
     <string name="higher_quality_music_summary">Ascultaţi şi descărcaţi muzică la calitate superioară</string>
     <string name="home_tab_local">Muzica mea</string>
@@ -376,7 +372,7 @@
     <string name="metered_allow">Streaming</string>
     <string name="metered_disallow">Anulaţi</string>
     <string name="metered_play_toast">Utilizare conexiune de date mobile pentru a transmite</string>
-    <string name="milink_unavaliable_please_update">Funcția Milink nu este disponibilă. Trebuie să actualizați MIUI.</string>
+    <string name="milink_unavaliable_please_update">"Funcția Milink nu este disponibilă. Trebuie să actualizați MIUI."</string>
     <string name="min_sleep_time">1</string>
     <string name="missing_title">&lt;Necunoscut&gt;</string>
     <string name="miui_music">Muzică Mi</string>
@@ -412,7 +408,7 @@
     <string name="more_online_song">Mai multe</string>
     <string name="more_online_suggest">Mai multe</string>
     <string name="more_settings">Setări avansate</string>
-    <string name="more_settings_summary">Setări pentru descărcări, utilizare date mobile, filtrare fișiere, etc.</string>
+    <string name="more_settings_summary">Setări pentru descărcări, temporizator, utilizare date mobile, filtrare fișiere, etc.</string>
     <string name="multichoice">Selectaţi</string>
     <string name="music_browser_label">Muzică</string>
     <string name="music_filter">Filtrare fişiere</string>
@@ -437,7 +433,7 @@
     <string name="network_request_error">Nu se poate conecta la rețea</string>
     <string name="network_settings_error">Nu se poate conecta la rețea</string>
     <string name="network_traffic">Utilizare date</string>
-    <string name="next_time">Data viitoare</string>
+    <string name="next_time">Nu acum</string>
     <string name="no_album_info">Nu există informaţii despre album</string>
     <string name="no_artist_info">Nu există informaţii despre artist</string>
     <string name="no_downloads">Nu există descărcări</string>
@@ -480,14 +476,12 @@
     <string name="online_music_enabled_summary">Ascultaţi și descărcaţi melodiile preferate. Vizualizaţi melodiile de top și listele de redare organizate oriunde aţi merge!</string>
     <string name="online_music_enabled_title">Streaming-ul gratuit este aici</string>
     <string name="online_playlist_is_empty">Listă de redare goală</string>
-    <string name="only_online_can_select_quality">Puteţi selecta calitatea doar pentru melodiile on-line</string>
     <string name="open_download">Deschideți</string>
     <string name="order_pending">Aşteptarea confirmării...</string>
     <string name="order_process_fail">Nu s-a putut autoriza contul dvs. Așteptați câteva minute și încercați din nou.</string>
     <string name="other_filter">Altele</string>
-    <string name="othor_song_in_album">Alte melodii în același album.</string>
+    <string name="othor_song_in_album">Alte melodii din acest album</string>
     <string name="package_filter">Pachete</string>
-    <string name="page_local_setting">Setări</string>
     <string name="pause_download">Oprește</string>
     <string name="paused_by_app">Oprită</string>
     <string name="paused_in_power_save_mode">Oprită în modul Economisire acumulator</string>
@@ -500,6 +494,10 @@
     <string name="pay_now">Serviciu actual</string>
     <string name="payment_fail">Achitare eşuată</string>
     <string name="payment_success">Achitare finalizată</string>
+    <string name="permission_declaration_message">Permiteți accesul la spațiul de stocare din Securitate &gt; Permisiuni &gt; Permisiuni &gt; Stocare &gt; Muzică pentru a putea utiliza aplicația în mod normal.</string>
+    <string name="permission_declaration_negative_text">Mai târziu</string>
+    <string name="permission_declaration_positive_text">Mergeți la Securitate</string>
+    <string name="permission_declaration_title">Permiteți accesul</string>
     <string name="play_all_song">Redaţi tot</string>
     <string name="play_next">Redă următoarea piesă</string>
     <string name="playback_failed_no_title_by_bad_file">Melodia nu poate fi redată. Formatul nu este acceptat sau fișierul nu există.</string>
@@ -533,9 +531,9 @@
     <string name="radar">ACRCloud</string>
     <string name="radar_click_to_retry">Apăsați pentru a reîncerca</string>
     <string name="radar_fail">Niciun rezultat</string>
-    <string name="radar_fail_by_noise">Este posibil ca zgomotul de fond să fie prea puternic</string>
-    <string name="radar_listening_state">Recunoaștere în progres</string>
-    <string name="radar_possible_result">Melodii posibile</string>
+    <string name="radar_fail_by_noise">"Se pare că zgomotul de fond este prea puternic"</string>
+    <string name="radar_listening_state">Recunoaștere melodie...</string>
+    <string name="radar_possible_result">Rezultate posibile</string>
     <string name="radar_retry">Reîncercați</string>
     <string name="radar_searching_state">Căutare în curs...</string>
     <string name="radar_support_by">Oferit de ACRCloud</string>
@@ -615,7 +613,7 @@
     <string name="sleep_mode_canceled">Temporizator oprit</string>
     <string name="sleep_mode_summary">Se opreşte redarea după un anumit timp</string>
     <string name="sleep_mode_title">Temporizator</string>
-    <string name="song_exist_in_playlist">Operațiunea a eșuat. Melodia există deja în lista de redare.</string>
+    <string name="song_exist_in_playlist">Melodia există deja în lista de redare</string>
     <string name="song_is_empty">Numele melodiei nu poate fi necompletat.</string>
     <string name="song_name">Melodie</string>
     <string name="song_not_find">Această melodie nu este disponibilă.</string>
@@ -625,7 +623,7 @@
     <string name="sort_by_name">Nume</string>
     <string name="sort_by_time">Dată</string>
     <string name="source_from">Sursă: %1$s</string>
-    <string name="start_download_music">Se descarcă pachetul de actualizare pentru aplicația Muzică Mi...</string>
+    <string name="start_download_music">Se descarcă pachetul de actualizare pentru aplicația Muzică.</string>
     <string name="start_to_download">Descărcare…</string>
     <string name="start_to_play">Redaţi</string>
     <string name="start_to_use">Porniți aplicația Muzică</string>
@@ -659,7 +657,7 @@
     <string name="task_already_exist">Sarcina există deja</string>
     <string name="ticket_summary">Cumpărați bilete pentru spectacole, concerte și alte evenimente</string>
     <string name="ticket_title">Arată biletele</string>
-    <string name="time_to_upgrade">Ar trebui să actualizați aplicația Muzică Mi</string>
+    <string name="time_to_upgrade">Actualizați aplicația Muzică Mi</string>
     <string name="title_online_artist">Artiști de Top</string>
     <string name="title_online_billboard">Topuri muzicale</string>
     <string name="title_online_fm">Radio</string>
