--- a/Romanian/main/miuisystem.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miuisystem.apk/res/values-ro/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+    <string name="add_frequent_phrases">Adăugare expresii frecvente</string>
     <string name="android_ringtone_default_with_actual">Ton de apel prestabilit (%1$s)</string>
     <string name="android_ringtone_silent">Niciunul</string>
     <string name="android_ringtone_unknown">Ton de apel necunoscut</string>
@@ -9,9 +10,14 @@
     <string name="cloud_state_finished">Sincronizat cu Mi Cloud</string>
     <string name="cloud_state_syncing">Sincronizat cu Mi Cloud</string>
     <string name="default_name">Prestabilit</string>
+    <string name="delete_frequent_phrases">Ștergeți expresiile frecvente</string>
+    <string name="delete_frequent_phrases_confirm">Ștergeți expresiile frecvente selectate?</string>
     <string name="device_hongmi">Redmi</string>
     <string name="device_pad">Mi Pad</string>
     <string name="device_xiaomi">Telefon Mi</string>
+    <string name="edit_frequent_phrases">Editați expresiile frecvente</string>
+    <string name="frequent_phrases_des">Introduceți expresii utilizate frecvent dintr-o atingere</string>
+    <string name="frequent_phrases_size_exceeded">Se pot adăuga maxim 10 expresii frecvente. Ștergeți-le pe cele inutile pentru a putea adăuga altele</string>
     <string name="group_name_contacts">Contacte</string>
     <string name="group_name_coworkers">Colegi</string>
     <string name="group_name_family">Familie</string>
@@ -20,6 +26,9 @@
 accesaţi %s"</string>
     <string name="loading">Încărcare…</string>
     <string name="maml_component_customization_title">Setări</string>
+    <string name="menu_add_frequent_phrases">Adăugați</string>
+    <string name="menu_delete">Ștergeți</string>
+    <string name="menu_edit">Editați</string>
     <string name="mibi_license">Condiţii de utilizare Mi credit</string>
     <string name="miui_device_name">Android</string>
     <string name="no_notification_tips">Nicio notificare</string>
